--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,11 +15,12 @@ body{
     display: flex;
     box-sizing: border-box;
     max-width: 320px;
-    height: 80vh;
+    height: 55vh;
     background-color: aqua;
     margin: 5% auto;
     padding: 5px;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     border-radius: 8px;
 }
